--- a/programacion-web/Mayo-2025-Hanitsasoa-fullstack-Vue/backend/package.json
+++ b/programacion-web/Mayo-2025-Hanitsasoa-fullstack-Vue/backend/package.json
@@ -1,6 +1,11 @@
 {
-  "name": "backend-prueba-tecnica-mayo",
+  "name": "form-backend",
   "version": "1.0.0",
+  "keywords": [
+    "server",
+    "expressjs",
+    "cors"
+  ],
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -12,6 +17,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "uuid": "^11.1.0"
   }
 }
